added js password form and text

--- a/index.html
+++ b/index.html
@@ -5,11 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
     <title>For Marina</title>
 </head>
 <body>
+    <div class="password-form">
+        <form name="publish">
+          <input type="text" name="message" placeholder="Введи пароль"/>
+          <input type="submit" value="OK"/>
+        </form>
+      </div>
     <div class="container">
-        <p class="main-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore quam itaque temporibus nobis sequi distinctio asperiores, dolorum vitae amet eos excepturi expedita illo. Dolorem necessitatibus doloribus, officiis eaque id facilis molestiae nulla soluta aspernatur deserunt ut odio magnam. Dolore quis repudiandae natus dolor officiis minus, odit adipisci ad, aspernatur quo asperiores eum maxime inventore quas officia. Consequatur, fugiat! Modi laudantium id inventore perspiciatis officiis minus qui excepturi ut commodi consequuntur dignissimos, suscipit magni ea ullam repudiandae sequi ipsam hic? Impedit repudiandae non, aut et rerum deleniti assumenda dolores odit eligendi suscipit molestias necessitatibus vero fugiat error aspernatur commodi ex provident!</p>
+        <p class="main-text">
+            Марина, <br/>
+Не знаю в какой ты ситуации сейчас открываешь и читаешь это «послание», но надеюсь у тебя всё хорошо и ты в правильном месте на пути к своим целям и мечтам.
+<br/>
+<hr/>
+Я хочу заранее попросить прощения у тебя, что соврал тебе и завел в заблеждение, так как никакого проекта связаного со здоровьем и измерением запьястья нет - я это всё выдумал, дальше ты поймёшь (надеюсь) для чего.
+И так, Марина, я хочу сказать, что я тебя очень плохо знаю, мы в целом, с натяжкой друзья, никогда особо не общались. Но, я почему-то чувствую, знаю и убеждён, что ты очень хороший, добрый и искренний человек. Я совершенно не суевернный и не верующий человек, но я словил какое-то странное чувство и желаение сделать тебе добро, порадовать. Я знаю, что ты 100% делала и сделаешь много хороших поступков. Так вот сегодня я хочу поблагодарить тебя за это добро, которое ты излучаешь и даришь этому миру.
+По моему плану, ты должна это читать где-то на пути или уже в Австрии. 
+Так вот, я хочу сказать, что очень рад твоему новому этапу жизни, я уверен, что это ключевой этап. Ты большая умница, ты будешь учиться в Австрии и переключишь свою жизнь на 100500 ступеней вверх к своим мечтам. Я верю в тебя!
+Хочу чтобы ты ни в коем случае не предавала себя! Я верю, что ты действительно такой чувственный, искренний и добрый человечек которым ты мне кажешься. Продолжай в том же духе и мир будет благодарить тебя, просто так. 
+Я желаю тебе удачи в твоей новой страничке жизни, не потеряйся, развивайся, верь, двигайся и всегда улыбайся!
+Прими пожалуйста от меня этот маленький подарок, который я внезапно захотел тебе сделать.
+<br/><hr/>
+P.S.
+Я очень надеюсь, что тебе понравился и подошел подарок. В ином случае, ты можешь его сдать - я точно не обижусь.
+        </p>
     </div>
 </body>
 </html>
